fix white space at end of line

--- a/assets/style/linkstyles.scss
+++ b/assets/style/linkstyles.scss
@@ -45,6 +45,7 @@
 .link--kukuri:hover::after {
 	-webkit-transform: translate3d(100%,0,0);
 	transform: translate3d(100%,0,0);
+	right: -0.6px; //fix white space at end of line
 }
 
 .link--kukuri::before {
